fix: modified size of box on mobile devices

--- a/index.css
+++ b/index.css
@@ -90,8 +90,8 @@ h6 {
 
 
     @media (max-width:480px) {
-        width: 90%;
-        margin-left: 2em;
+        width: 100%;
+        
     }
 }
 
@@ -116,11 +116,10 @@ small {
     padding-bottom: 0.2em;
 
     @media (max-width:480px) {
-        width: 90%;
+        width: 100%;
         align-self: center;
         font-size: xx-small;
-        margin-left: 2em;
-        padding: 1em;
+        padding: 2em;
     }
 
 }
